# openclaw-deal-scout

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  skills-lock.json
.claude/agents/: constitution-gate-checker.md  spec-scorer.md
.specify/memory/: constitution.md
deploy/: README.md  openclaw.service  openclaw.timer  openclaw@.service
history/adr/: 0001-python-fastmcp-subprocess-runtime.md  0002-json-file-state-store-mechanism.md  0003-crm-write-failable-pending-and-circuit-breaker.md  0004-gateway-http-transport-replaces-stdio-subprocess-model.md  0005-gateway-scheduler-architecture-single-process-thread-model.md
specs/001-gmail-intake/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-hubspot-crm-logger/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-discord-notification/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-pipeline-orchestration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-mcp-dashboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/crm_logger/: client.py  log_deal.py  models.py  orchestrator.py  server.py  state_store.py
src/discord_notifier/: adapter.py  formatter.py  models.py  notifier.py  orchestrator.py  server.py  state_store.py
src/gmail_intake/: classifier.py  extractor.py  gmail_client.py  models.py  server.py  setup_oauth.py  state_store.py
src/openclaw_gateway/: __init__.py  __main__.py  cli.py  config.py  readers.py  scheduler.py  server.py
(+95 files in other folders)
