[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-gmail-intake"
version = "0.1.0"
description = "Gmail Intake & Deal Detection MCP tool for OpenClaw Deal Scout"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "google-api-python-client>=2.130",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
    "google-generativeai>=0.8",
    "portalocker>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
